[gd_scene load_steps=17 format=3 uid="uid://8gv1plcum6hj"]

[ext_resource type="Script" path="res://script/q5.gd" id="1_sjqg1"]
[ext_resource type="Texture2D" uid="uid://b3dpgngytqqix" path="res://Assets/classroom.webp" id="2_nylnc"]
[ext_resource type="Texture2D" uid="uid://byhqu6xsmv3rl" path="res://Assets/paper.png" id="3_qpgym"]
[ext_resource type="AudioStream" uid="uid://cj8dup514kmei" path="res://Symphony no. 5 in Cm, Op. 67 - I. Allegro con brio.wav" id="4_ehfck"]
[ext_resource type="Script" path="res://script/rich_text_label.gd" id="5_cyqnw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6apnh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eipf8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d75hi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5pr5d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hu82r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pqa4e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_veup8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0s1kc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6x6jd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ujqgy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oo5rb"]

[node name="Node" type="Node"]
script = ExtResource("1_sjqg1")

[node name="classroom" type="Sprite2D" parent="."]
position = Vector2(-23.25, -244.5)
scale = Vector2(3.98583, 4.16539)
texture = ExtResource("2_nylnc")

[node name="Label" type="Label" parent="classroom"]
offset_left = -190.827
offset_top = -153.414
offset_right = 200.173
offset_bottom = 18.5856
text = "Mediocrely Medium:

Question 5:
What musical form is this?"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Paper" type="Sprite2D" parent="."]
position = Vector2(-832, -22)
texture = ExtResource("3_qpgym")

[node name="Button" type="Button" parent="Paper"]
anchors_preset = -1
anchor_bottom = 0.21
offset_left = -210.0
offset_top = -147.0
offset_right = 124.0
offset_bottom = -141.4
rotation = -0.152343
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_6apnh")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_eipf8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_d75hi")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_5pr5d")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_hu82r")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_pqa4e")
theme_override_styles/hover = SubResource("StyleBoxEmpty_veup8")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_0s1kc")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6x6jd")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ujqgy")
theme_override_styles/normal = SubResource("StyleBoxEmpty_oo5rb")
action_mode = 0
text = "A) Sonata"
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="Paper"]
anchors_preset = -1
anchor_bottom = 0.21
offset_left = -194.0
offset_top = -65.0
offset_right = 140.0
offset_bottom = -59.4
rotation = -0.152343
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_6apnh")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_eipf8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_d75hi")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_5pr5d")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_hu82r")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_pqa4e")
theme_override_styles/hover = SubResource("StyleBoxEmpty_veup8")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_0s1kc")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6x6jd")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ujqgy")
theme_override_styles/normal = SubResource("StyleBoxEmpty_oo5rb")
action_mode = 0
text = "B) Rondo"
metadata/_edit_use_anchors_ = true

[node name="Button3" type="Button" parent="Paper"]
anchors_preset = -1
anchor_bottom = 0.21
offset_left = -177.0
offset_top = 27.0
offset_right = 157.0
offset_bottom = 32.6
rotation = -0.152343
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_6apnh")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_eipf8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_d75hi")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_5pr5d")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_hu82r")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_pqa4e")
theme_override_styles/hover = SubResource("StyleBoxEmpty_veup8")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_0s1kc")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6x6jd")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ujqgy")
theme_override_styles/normal = SubResource("StyleBoxEmpty_oo5rb")
action_mode = 0
text = "C) Fugue"
metadata/_edit_use_anchors_ = true

[node name="Button4" type="Button" parent="Paper"]
anchors_preset = -1
anchor_bottom = 0.21
offset_left = -156.0
offset_top = 115.0
offset_right = 178.0
offset_bottom = 120.6
rotation = -0.152343
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_6apnh")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_eipf8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_d75hi")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_5pr5d")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_hu82r")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_pqa4e")
theme_override_styles/hover = SubResource("StyleBoxEmpty_veup8")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_0s1kc")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6x6jd")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ujqgy")
theme_override_styles/normal = SubResource("StyleBoxEmpty_oo5rb")
action_mode = 0
text = "D) Symphony"
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-8, -332)
zoom = Vector2(0.5, 0.5)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ehfck")
autoplay = true

[node name="scoreLabel" type="StaticBody2D" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="scoreLabel"]
offset_left = -878.0
offset_top = -210.0
offset_right = -687.0
offset_bottom = -151.0
rotation = -0.111896
theme_override_colors/table_border = Color(0, 0, 0, 1)
theme_override_colors/table_even_row_bg = Color(0, 0, 0, 1)
theme_override_colors/table_odd_row_bg = Color(0, 0, 0, 1)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 30
text = "Score: 15/15"
script = ExtResource("5_cyqnw")
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Paper/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Paper/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Paper/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Paper/Button4" to="." method="_on_button_4_pressed"]
